Update SMAPI
(1)Rewrite the installation logic